--- a/mi-cv-react/package.json
+++ b/mi-cv-react/package.json
@@ -28,5 +28,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   },
-  "homepage": "https://chronischer-zauderer.github.io/mi-cv-react/"
+  "homepage": "https://chronischer-zauderer.github.io/mi-cv-react/src/index.html"
 }
